# tools-orogen_metadata

./: CMakeLists.txt  manifest.xml  orogen_metadata.pc.in
bindings/ruby/lib/: orogen_metadata.rb
bindings/ruby/lib/orogen_metadata/: orogen_plugin.rb  typelib.rb
include/: Metadata.hpp
lib/orogen_metadata/: metadata.rb  orogen_plugin.rb
plugins/: orogen_plugin.rb  typelib_plugin.rb
ruby/lib/: metadata_types.rb
src/: CMakeLists.txt  Metadata.hpp
